# ixforge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: CapabilityRouter.tsx  DeviceDashboard.tsx
app/src/components/lcd/: LcdPanel.tsx
app/src/components/macro/: MacroPanel.tsx
app/src/components/rgb/: ColorTools.tsx  EffectPanel.tsx  KeyboardCanvas.tsx  KeyboardPreview.tsx  KeyboardView.tsx  PresetBar.tsx  RgbEditor.tsx  SolidPanel.tsx  ZoneEditor.tsx
app/src/ipc/: backend.ts  commands.ts  events.ts  mock.ts
app/src/rgb/: deviceArt.ts  effects.ts
app/src/store/: useStore.ts
app/src/types/: forge.ts
captures/aula-f108-pro/: README.md  effects-map.txt  f108-animation-description.txt  keymap-probe.txt
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: capability.rs  color.rs  command.rs  driver.rs  error.rs  ids.rs  lib.rs  profile.rs  transport.rs
crates/forge-drivers/: Cargo.toml
crates/forge-drivers/src/: framing.rs  lib.rs
crates/forge-drivers/src/sinowealth/: mod.rs
crates/forge-drivers/src/sonix/: lcd.rs  macros.rs  mod.rs
crates/forge-macro/: Cargo.toml
crates/forge-macro/src/: host.rs  lib.rs
crates/forge-profiles/: Cargo.toml
crates/forge-profiles/src/: lib.rs  presets.rs
crates/forge-registry/: Cargo.toml
crates/forge-registry/src/: lib.rs
crates/forge-transport/: Cargo.toml
crates/forge-transport/src/: hidapi_backend.rs  lib.rs  mock.rs
docs/: ROADMAP.md
docs/protocols/: aula-f108-pro.md
profiles/aula/: f108-pro.toml
tools/: f108_effect.py  f108_effect_select.py  f108_min.py  f108_persist.py  f108_replay.py  f108_save.py  f108_test.py  f108_warmup.py
