[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-transport",
    "crates/forge-profiles",
    "crates/forge-drivers",
    "crates/forge-registry",
    "crates/forge-macro",
    "crates/forge-cli",
    "app/src-tauri",
]
# The hardware-free CI/test job scopes itself to the library crates with `-p`
# (see .github/workflows/ci.yml). `forge-app` (Tauri, needs webview libs) and
# `forge-cli` (needs libudev for hidapi) are built on the target OS.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WoollyAnders/ixforge"
authors = ["IX Forge contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
hidapi = "2"
enigo = "0.2"
