[package]
name = "forge-cli"
description = "IX Forge developer CLI — fire commands at real hardware during protocol bring-up."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "forge-cli"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-transport = { path = "../forge-transport" }
forge-profiles = { path = "../forge-profiles" }
forge-drivers = { path = "../forge-drivers" }
forge-registry = { path = "../forge-registry" }
# Decode/resize test images (GIF/PNG/JPG) for the `lcd` command. MIT/Apache.
image = { version = "0.25", default-features = false, features = ["gif", "png", "jpeg", "bmp"] }
# Direct HID access for the LCD path (output reports to interface 2, Feature
# reports to interface 3) — the LCD is a HID interface (HidUsb), so no WinUSB.
hidapi = { workspace = true }
