[package]
name = "forge-core"
description = "IX Forge — pure domain contract: capability model, device profiles, and driver/transport traits. No I/O."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
