[package]
name = "forge-profiles"
description = "IX Forge — device profile loading/validation and user config persistence."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
