[package]
name = "forge-transport"
description = "IX Forge — HID transport implementations (hidapi backend + mock) behind forge-core's HidTransport trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
hidapi = { workspace = true, optional = true }

[features]
default = ["hidapi-backend"]
# The real USB backend. Off by default in the hardware-free CI/test job because
# hidapi links a C library (libudev on Linux). MockTransport is always available.
hidapi-backend = ["dep:hidapi"]
